examples/c/error-codes/violates-constraint/fatal/CV-CCV9-bad-static.output
CV-CCV9-bad-static.c:6:10: error: pointer cannot be cast to type 'double'
 (double)p;
         ^
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
